clusters/common/apps/garage/webui/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garage-webui
  labels:
    app.kubernetes.io/name: garage-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: garage-webui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: garage-webui
    spec:
      containers:
        - name: garage-webui
          image: oci.${CLUSTER_DOMAIN}/garage-webadmin:latest
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 256Mi
