clusters/common/apps/garage/webui/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-webui
  annotations:
    item.homer.rajsingh.info/name: "Garage"
    item.homer.rajsingh.info/subtitle: "S3-Compatible Storage"
    item.homer.rajsingh.info/logo: "https://garagehq.deuxfleurs.fr/images/garage-logo.svg"
    item.homer.rajsingh.info/keywords: "storage, s3, object"
    service.homer.rajsingh.info/name: "Infrastructure"
    service.homer.rajsingh.info/icon: "fas fa-server"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
  hostnames:
    - "garage.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: garage-webui
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
